k8s/factorial-metrics/factorial-metrics.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: factorial-metrics
  labels:
    app: factorial-metrics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: factorial-metrics
  template:
    metadata:
      labels:
        app: factorial-metrics
    spec:
      containers:
        - name: factorial-metrics
          image: ghcr.io/hryuk/factorial-metrics:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: factorial-metrics-service
spec:
  selector:
    app: factorial-metrics
  ports:
    - protocol: TCP
      port: 3000
